# dt-demos-cps

./: README.md
dt-joystick/: CMakeLists.txt  README.md  package.xml
dt-joystick/launch/: joystick_node.launch.xml
dt_demo_keyboard/: package.xml  setup.cfg  setup.py
dt_demo_keyboard/dt_demo_keyboard/: keyboard_control.py  lane_following_control.py
dt_demos/: CMakeLists.txt  README.md  package.xml
dt_demos/launch/: common.launch.xml  generic_lane_following.launch.xml  generic_vision_pipeline.launch.xml  lane_following.launch.xml  simple_joystick_driving.launch.xml  vision_pipeline.launch.xml
dt_ood_cps/: README.md  package.xml  setup.cfg  setup.py
dt_ood_cps/dt_ood_cps/: stream_to_dataset_node.py
dt_ood_cps/dt_ood_cps/cropper/: __init__.py  bin_cropper.py  fit_cropper.py  passthrough_cropper.py  segment_cropper_interface.py  trim_cropper.py  utility.py
dt_ood_cps/launch/: stream_to_dataset.launch.xml
